--- a/index.html
+++ b/index.html
@@ -17,16 +17,14 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
 	<body class="">
-            <div class="stickyfloat_element">Faltan 30 turnos</div>
             <div id="page-wrapper">
-
     			<!-- Header -->
     				<header id="header">
     					<h1 id="logo"><a href="index.html"></a></h1>
 
     					<nav id="nav">
+    						     <div class="stickyfloat_element" id="esto"><span id="bam"></span></div>
     						<ul>
-                                <div class="stickyfloat_element">Faltan 30 turnos</div>
     							<li><a href="team.html">Equipo</a></li>
     							<li><a href="contact.html">Contacto</a></li>
     							<li><a href="login.html" class="button special">Pide tu turno</a></li>
@@ -135,5 +133,7 @@
 			  };
 			  firebase.initializeApp(config);
 			</script>
+			<script src="assets/js/index.js"></script>
+			<script> onload();</script>
 	</body>
 </html>
