--- a/login.html
+++ b/login.html
@@ -64,5 +64,18 @@
 				$('#page-wrapper').show();
 			});
 		</script>
+		 <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+            	<script>
+			  // Initialize Firebase
+			  var config = {
+			    apiKey: "AIzaSyDKCIZupI3ME9Q3iwycfXpEM_3DtnIpXQY",
+			    authDomain: "tuturno-98d9e.firebaseapp.com",
+			    databaseURL: "https://tuturno-98d9e.firebaseio.com",
+			    storageBucket: "tuturno-98d9e.appspot.com",
+			  };
+			  firebase.initializeApp(config);
+			</script>
+			<script src="assets/js/login.js"></script>
+			<script> onload();</script>
 	</body>
 </html>
