--- a/contact.html
+++ b/contact.html
@@ -11,10 +11,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
+        <link rel="stylesheet" href="assets/style.css">
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
 	<body>
+				
 		<div id="page-wrapper">
 
 			<!-- Header -->
@@ -22,6 +24,7 @@
 					<h1 id="logo"><a href="index.html">TuTurno</a></h1>
 					<nav id="nav">
 						<ul>
+									<div class="stickyfloat_element" id="esto"><span id="bam"></span></div>
 							<li><a href="team.html">Equipo</a></li>
 							<li><a href="login.html" class="button special">Pide tu turno</a></li>
 						</ul>
@@ -108,6 +111,8 @@
 			  };
 			  firebase.initializeApp(config);
 			</script>
+			<script src="assets/js/contact.js"></script>
+			<script> onload();</script>
 
 
 	</body>
