--- a/user.html
+++ b/user.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/style.css">
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
@@ -22,6 +23,7 @@
 					<h1 id="logo"><a href="index.html">TuTurno</a></h1>
 					<nav id="nav">
 						<ul>
+							<div class="stickyfloat_element" id="esto"><span id="bam"></span></div>
 							<li>
 								<a>Usuario</a>
 										<ul>
@@ -80,13 +82,10 @@
 					<ul class="icons">
 						<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 						<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; TuTurno. Todos los derechos reservados.</li><li>Diseño: <a href="http://tglassesguy.tumblr.com">Javier Collazos</a></li>
 					</ul>
 				</footer>
 		</div>
@@ -118,6 +117,8 @@
 			  };
 			  firebase.initializeApp(config);
 			</script>
+			<script src="assets/js/user.js"></script>
+			<script> onload();</script>
 
 	</body>
 </html>
