a la mierda todo

--- a/App.html
+++ b/App.html
@@ -39,6 +39,10 @@
 			<div id='not' style='display:none;'>
 				<h1><span id="notyet">El servicio no está disponible.</span></h1>
           	</div>
+            <div id='set' style='display:none;'>
+				<h1><span id="notyet">Has cancelado tu turno.</span></h1>
+                <button type="button" name="button" href="index.html" id="superboton"><span id="estilo">Volver.</span></button>
+          	</div>
             <div id='boton' style='display:none;'>
                 <button type="button" name="button" onclick="app()" id="superboton"><span id="estilo">Dame mi turno</span></button>
             </div>
@@ -59,8 +63,8 @@
                         No te procupes <br/>
                         Te avisaremos cuando tu turno se aproxime, <b>recuerda tener tus notificaciones activadas.</b><br/>
                         <i>Se responsable y atiende tu turno cuando te corresponda.</i></span>
-                        <span id="comentario_dos"></span>
                         <div id="bonotes_exit" style="display: none;">
+                            <span id="comentario_dos"></span>
                         	 <button type="button" name="button" onclick="" id="superboton"><span id="estilo">Aceptar turno</span></button>
                				 <button type="button" name="button" onclick="" id="superboton"><span id="estilo">Cancelar turno</span></button>
                         </div>
