--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     					<h1 id="logo"><a href="index.html"></a></h1>
 
     					<nav id="nav">
-    						     <div class="stickyfloat_element" id="esto"><span id="bam"></span></div>
+                                <link rel="stylesheet" href="assets/style.css">
     						<ul>
     							<li><a href="team.html">Equipo</a></li>
     							<li><a href="contact.html">Contacto</a></li>
