--- a/team.html
+++ b/team.html
@@ -10,7 +10,9 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="shortcut icon" href="images/Logo3.png">
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/style.css">
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
@@ -20,6 +22,7 @@
 			<!-- Header -->
 				<header id="header">
 					<h1 id="logo"><a href="index.html">TuTurno</a></h1>
+					<div class="stickyfloat_element" id="esto"><span id="bam"></span></div>
 					<nav id="nav">
 						<ul>
 							<li><a href="contact.html">Contacto</a></li>
@@ -93,6 +96,7 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/team.js"></script>
             <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
             	<script>
 			  // Initialize Firebase
